client/blocks/video-editor/style.scss
.video-editor {
	position: relative;
	width: 100%;
	height: 100%;
}

.video-editor__content {
	display: flex;
	flex-direction: column;
	position: absolute;
		top: 0;
		bottom: 0;
		left: 0;
		right: 0;
	background: darken($gray, 52%);
}

.video-editor__preview-wrapper {
	flex: 2 0 0%;
	position: relative;
	border-bottom: 1px solid lighten( $gray, 20% );

	@include breakpoint( ">660px" ) {
		margin: 16px 24px;
		border: 0;
	}
}

.video-editor__preview-wrapper .spinner,
.video-editor__preview {
	position: absolute;
		top: 50%;
		left: 50%;
	max-height: 100%;
	max-width: 100%;
	transform: translate( -50%, -50% );

	.spinner__border {
		fill: transparent;
	}
}

.video-editor__preview {
	display: flex;
	align-items: center;
	height: 100%;
	width: 100%;
}

.video-editor__text {
	color: $white;
	text-align: center;
	margin: 16px 0;
}

.video-editor__buttons {
	border-top: 1px solid $gray-dark;
	padding: 16px;
	text-align: right;
}

.video-editor__upload-button {
	position: relative;
	display: inline-block;

	&.is-disabled span {
		color: lighten( $gray, 30% );
	}
}

.video-editor__upload-button-input {
	position: absolute;
		top: 0;
		right: 0;
		bottom: 0;
		left: 0;
	opacity: 0;
	cursor: pointer;

	&:disabled {
		cursor: default;
	}
}

.video-editor__buttons-button.button {
	margin-left: 10px;
}

