Fix issue with error not showing when poster could not be updated

--- a/client/blocks/video-editor/style.scss
+++ b/client/blocks/video-editor/style.scss
@@ -4,6 +4,12 @@
 	height: 100%;
 }
 
+.editor-media-modal .video-editor .notice {
+	@include breakpoint( ">660px" ) {
+		margin-top: 0;
+	}
+}
+
 .video-editor__content {
 	display: flex;
 	flex-direction: column;
@@ -26,25 +32,17 @@
 	}
 }
 
-.video-editor__preview-wrapper .spinner,
 .video-editor__preview {
+	align-items: center;
+	display: flex;
 	position: absolute;
 		top: 50%;
 		left: 50%;
+	height: 100%;
+	width: 100%;
 	max-height: 100%;
 	max-width: 100%;
 	transform: translate( -50%, -50% );
-
-	.spinner__border {
-		fill: transparent;
-	}
-}
-
-.video-editor__preview {
-	display: flex;
-	align-items: center;
-	height: 100%;
-	width: 100%;
 }
 
 .video-editor__text {
